# copy-tab-urls-chrome

./: .gitignore  CHANGELOG.md  FEATURE-REQUESTS.md  FIREFOX-COMPATIBILITY.md  LIBREWOLF-INSTALL.md  README.md  TASKS.md  background-firefox.js  background.html  background.js  build-firefox.sh  build-xpi-librewolf-fixed.sh  build-xpi-librewolf.sh  build-xpi.sh  content.js  copy-tab-urls-chrome.txt  instructions.txt  manifest-firefox.json  manifest.firefox.mv2.json  manifest.json  manual-xpi-build.sh  popup.html  popup.js  pyproject.toml  quick-build.sh  setup.cfg  summary.txt  troubleshoot-xpi.sh  update_extension.py
.specstory/history/: 2025-10-08_03-55Z-evaluate-repo-for-discripper-references.md  2025-10-08_04-05Z-can-i-install-an-extension-in-librewolf.md
src/discripper/: __init__.py  paths.py
tests/: test_background_adapter.py  test_browser_adapter.py  test_clipboard_import.py  test_manifest.py  test_popup_html.py  test_popup_logic.py  test_release_metadata.py  test_utils.py
tests/helpers/: run_parse_urls.js
