[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "copy-tab-urls-chrome"
version = "1.50"
description = "Chrome extension for copying, restoring, and reopening tab URLs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Copy Tab URLs Maintainers"}]
license = {text = "MIT"}
dependencies = ["pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]
