[metadata]
name = discripper
version = 0.0.0

default_section = tool:pytest.ini_options

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pytest-cov

[options.packages.find]
where = src

[tool:pytest.ini_options]
testpaths =
    tests
addopts = --maxfail=1 -q

[tool:ruff]
target-version = py39
line-length = 100
